finish comment service

--- a/CommentService/src/main/resources/application.properties
+++ b/CommentService/src/main/resources/application.properties
@@ -16,4 +16,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 # drop n create table, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
