--- a/PostService/src/main/resources/application.properties
+++ b/PostService/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/sead-assignment-post
+spring.datasource.username=postgres
+spring.datasource.password=rmit
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.hibernate.ddl-auto=update
