--- a/RegistryService/pom.xml
+++ b/RegistryService/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.6.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.service-registry-test</groupId>
-	<artifactId>test-registry</artifactId>
+	<groupId>com.sead.Registry</groupId>
+	<artifactId>RegistryService</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>test-registry</name>
-	<description>Demo project for api connection</description>
+	<name>RegistryService</name>
+	<description>Register microservices for management</description>
 	<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>2021.0.0</spring-cloud.version>
