can CRUD post via CRUD service

--- a/PostService/src/main/resources/application.properties
+++ b/PostService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/sead-assignment-post
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo
 spring.datasource.username=postgres
 spring.datasource.password=rmit
 spring.datasource.driver-class-name=org.postgresql.Driver
