--- a/CommentService/src/main/resources/application.properties
+++ b/CommentService/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # drop n create table, good for testing, comment this in production
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
+
+server.port=8086
