--- a/CrudService/pom.xml
+++ b/CrudService/pom.xml
@@ -48,7 +48,12 @@
 			<artifactId>spring-web</artifactId>
 			<version>5.3.10</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.5.5</version>
+        </dependency>
+    </dependencies>
 
 	<dependencyManagement>
 		<dependencies>
