--- a/CrudService/pom.xml
+++ b/CrudService/pom.xml
@@ -53,7 +53,12 @@
             <artifactId>spring-data-commons</artifactId>
             <version>2.5.5</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-commons</artifactId>
+			<version>2.6.0</version>
+		</dependency>
+	</dependencies>
 
 	<dependencyManagement>
 		<dependencies>
