finish kafka in post and comment

--- a/CommentService/src/main/resources/application.properties
+++ b/CommentService/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 
 ## MySQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/comment
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo
 spring.datasource.username=postgres
 spring.datasource.password=rmit
 spring.datasource.driver-class-name=org.postgresql.Driver
