--- a/CrudService/pom.xml
+++ b/CrudService/pom.xml
@@ -58,6 +58,11 @@
 			<artifactId>spring-data-commons</artifactId>
 			<version>2.6.0</version>
 		</dependency>
+<!--Kafka-->
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
