--- a/PostService/src/main/resources/application.properties
+++ b/PostService/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.password=rmit
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 server.port=8082
