Added update user, toggle like

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ AuthService/.idea/workspace.xml
 AuthService/.idea/workspace.xml
 AuthService/.idea/workspace.xml
 .DS_Store
+AuthService/.idea/workspace.xml
