--- a/APIGatewayService/src/main/resources/application.yml
+++ b/APIGatewayService/src/main/resources/application.yml
@@ -11,10 +11,14 @@ spring:
           uri: lb://AUTH-SERVICE
           predicates:
             - Path=/api/auth/**
+          filter:
+            - CircuitBreaker=authServiceBreaker
         - id: CRUD-SERVICE
           uri: lb://CRUD-SERVICE
           predicates:
             - Path=/crud/**
+          filter:
+            - CircuitBreaker=crudServiceBreaker
 eureka:
   client:
     register-with-eureka: true
@@ -23,3 +27,28 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
   instance:
     hostname: localhost
+
+resilience4j.circuitbreaker:
+  instances:
+    authServiceBreaker:
+      registerHealthIndicator: true
+      slidingWindowSize: 100
+      permittedNumberOfCallsInHalfOpenState: 3
+      minimumNumberOfCalls: 20
+      waitDurationInOpenState: 50s
+      failureRateThreshold: 50
+      eventConsumerBufferSize: 10
+      recordFailurePredicate: com.sead.Gateway.APIGatewayService.exception.RecordFailurePredicate
+    crudServiceBreaker:
+      registerHealthIndicator: true
+      slidingWindowSize: 10
+      permittedNumberOfCallsInHalfOpenState: 3
+      slidingWindowType: TIME_BASED
+      minimumNumberOfCalls: 20
+      waitDurationInOpenState: 50s
+      failureRateThreshold: 50
+      eventConsumerBufferSize: 10
+      recordFailurePredicate: com.sead.Gateway.APIGatewayService.exception.RecordFailurePredicate
+
+
+
